// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test render initial index 1`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-200px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 1`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(0px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 2`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-100px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 3`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(0px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 4`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-200px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 5`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-300px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(300px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 6`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(100px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(-300px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
  </div>
</div>"
`;
